[build-system]
requires = [
    "setuptools >= 46.4.0",
    "wheel >= 0.32.0",
]
build-backend = "setuptools.build_meta"

[tool.towncrier]
directory = "changes"
package = "gbulb"
package_dir = "src"
filename = "CHANGELOG.rst"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/beeware/gbulb/issues/{issue}>`__"
template = "changes/template.rst"
underlines = ["-", "^", "\""]
