[build-system]
requires = [
    "setuptools==69.5.1",
    "setuptools_scm==8.0.4",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "gbulb"
description = "GLib event loop for Python asyncio"
readme = "README.rst"
requires-python = ">= 3.8"
license.text = "Apache 2.0"
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
    {name="Nathan Hoad", email="nathan@getoffmalawn.com"}
]
maintainers = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
keywords = [
    "gtk",
    "glib",
    "gnome",
    "asyncio",
    "tulip",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Dependencies required at runtime are set as ranges to ensure maximum
    # compatibility with the end-user's development environment.
    "pygobject >= 3.14.0",
]

[project.optional-dependencies]
# Extras used by developers *of* gbulb are pinned to specific versions to
# ensure environment consistency.
dev = [
    "coverage[toml] == 7.5.0",
    # Pre-commit 3.6.0 deprecated support for Python 3.8
    "pre-commit == 3.5.0 ; python_version < '3.9'",
    "pre-commit == 3.7.0 ; python_version >= '3.9'",
    "pytest == 8.1.1",
    "tox == 4.15.0",
]

[project.urls]
Homepage = "https://github.com/beeware/gbulb"
Funding = "https://beeware.org/contributing/membership/"
# Documentation = "http://gbulb.readthedocs.io/en/latest/"
Tracker = "https://github.com/beeware/gbulb/issues"
Source = "https://github.com/beeware/gbulb"

[tool.isort]
profile = "black"
skip_glob = [
    "venv*",
    "local",
]
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # "error",  # promote warnings to errors
]

# need to ensure build directories aren't excluded from recursion
norecursedirs = []

[tool.setuptools_scm]
# To enable SCM versioning, we need an empty tool configuration for setuptools_scm

[tool.towncrier]
directory = "changes"
package = "gbulb"
package_dir = "src"
filename = "CHANGELOG.rst"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/beeware/briefcase/issues/{issue}>`__"
template = "changes/template.rst"
type = [
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "bugfix", name = "Bugfixes", showcontent = true },
    { directory = "removal", name = "Backward Incompatible Changes", showcontent = true },
    { directory = "doc", name = "Documentation", showcontent = true },
    { directory = "misc", name = "Misc", showcontent = false },
 ]

[tool.codespell]
skip = '.git,*.pdf,*.svg'
# the way to make case sensitive skips of words etc
ignore-regex = '\bNd\b'
# case insensitive
# ignore-words-list = ''
