[metadata]

name = gbulb
version = attr: gbulb.__version__
url = https://github.com/beeware/gbulb
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://gbulb.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/gbulb/issues
    Source = https://github.com/beeware/gbulb
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
license = Apache 2.0
license_file = LICENSE
description = GLib event loop for tulip (PEP 3156)
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    gtk
    glib
    gnome
    asyncio
    tulip
platforms = linux

[options]
zip_safe = False
packages = find:
python_requires = >= 3.6
include_package_data = True
package_dir =
    = src
install_requires =
    pygobject>=3.14.0

[options.packages.find]
where = src

[aliases]
test = pytest

[bdist_wheel]
universal = 1


[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    venv*/*,\
    local/*,\
    docs/*,\
    build/*,\
    .eggs/*,\
    .tox/*
max-complexity = 10
max-line-length = 119
ignore = E121,E123,E126,E226,E24,E704,W503,W504,C901

[isort]
skip_glob =
    docs/conf.py
    venv*
    local
multi_line_output=3

[tool:pytest]
testpaths = tests

# need to ensure build directories aren't excluded from recursion
norecursedirs =
