[metadata]

name = gbulb
version = attr: gbulb.__version__
url = https://github.com/beeware/gbulb
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://gbulb.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/gbulb/issues
    Source = https://github.com/beeware/gbulb
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    # Programming Language :: Python :: 3.11
    # Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
license = Apache 2.0
license_file = LICENSE
description = GLib event loop for tulip (PEP 3156)
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    gtk
    glib
    gnome
    asyncio
    tulip
platforms = linux

[options]
zip_safe = False
packages = find:
python_requires = >= 3.6
include_package_data = True
package_dir =
    = src
install_requires =
    pygobject>=3.14.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

# need to ensure build directories aren't excluded from recursion
norecursedirs =

[flake8]
max-complexity = 25
max-line-length = 119
ignore = E203,E266,E501,W503
