[metadata]

name = gbulb
version = attr: gbulb.__version__
url = https://github.com/beeware/gbulb
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://gbulb.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/gbulb/issues
    Source = https://github.com/beeware/gbulb
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
license = Apache 2.0
license_files = LICENSE
description = GLib event loop for tulip (PEP 3156)
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    gtk
    glib
    gnome
    asyncio
    tulip
platforms = linux

[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
include_package_data = True
package_dir =
    = src
install_requires =
    pygobject>=3.14.0

[options.extras_require]
# Extras used by developers *of* gbulb are pinned to specific versions to
# ensure environment consistency.
dev =
    coverage[toml] == 7.1.0
    # Pre-commit 3.0 dropped support for Python 3.7
    pre-commit == 2.21.0; python_version < "3.8"
    pre-commit == 3.0.2; python_version >= "3.8"
    pytest == 7.2.1
    pytest-tldr == 0.2.5
    tox == 4.4.2

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

# need to ensure build directories aren't excluded from recursion
norecursedirs =

[flake8]
max-complexity = 25
max-line-length = 119
ignore = E203,E266,E501,W503
